HTN_Planner/planner/pddl-python/pddl/parser/PDDLParser.py
# Generated from PDDL.g4 by ANTLR 4.8
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class PDDLParser ( Parser ):

    grammarFileName = "PDDL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"'-'", u"'='", u"'define'", 
                     u"'domain'", u"'problem'", u"':domain'", u"':requirements'", 
                     u"':types'", u"':constants'", u"':predicates'", u"':objects'", 
                     u"':init'", u"':goal'", u"':action'", u"':parameters'", 
                     u"':precondition'", u"':effect'", u"':observe'", u"':task'", 
                     u"':method'", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"':constraints'", u"':htn'", u"'<'", u"'not'", u"'and'", 
                     u"'forall'", u"'when'", u"'either'", u"'unknown'", 
                     u"'or'", u"'oneof'" ]

    symbolicNames = [ u"<INVALID>", u"LP", u"RP", u"OF", u"EQUALS", u"DEFINE", 
                      u"DOMAIN", u"PROBLEM", u"DDOMAIN", u"REQUIREMENTS", 
                      u"TYPES", u"CONSTANTS", u"PREDICATES", u"OBJECTS", 
                      u"INIT", u"GOAL", u"ACTION", u"PARAMETERS", u"PRECONDITION", 
                      u"EFFECT", u"OBSERVE", u"TASK", u"METHOD", u"ORDERED", 
                      u"SUBTASKS", u"ORDERING", u"CONSTRAINTS", u"HTN", 
                      u"BEFORE", u"NOT", u"AND", u"FORALL", u"WHEN", u"EITHER", 
                      u"UNKNOWN", u"OR", u"ONEOF", u"REQUIRE_KEY", u"NAME", 
                      u"VARIABLE", u"NUMBER", u"LINE_COMMENT", u"WHITESPACE" ]

    RULE_pddl = 0
    RULE_domain = 1
    RULE_requireDef = 2
    RULE_typesDef = 3
    RULE_typedList = 4
    RULE_constantsDef = 5
    RULE_typedObjList = 6
    RULE_predicatesDef = 7
    RULE_predicateDef = 8
    RULE_typedVarList = 9
    RULE_structureDef = 10
    RULE_actionDef = 11
    RULE_goalDef = 12
    RULE_effectDef = 13
    RULE_cEffect = 14
    RULE_condEffect = 15
    RULE_observeDef = 16
    RULE_literal = 17
    RULE_atomicFormula = 18
    RULE_term = 19
    RULE_taskDef = 20
    RULE_methodDef = 21
    RULE_taskNetworkDef = 22
    RULE_subtasksDef = 23
    RULE_subtaskDef = 24
    RULE_orderingDefs = 25
    RULE_orderingDef = 26
    RULE_constraintDefs = 27
    RULE_constraintDef = 28
    RULE_problem = 29
    RULE_objectDeclaration = 30
    RULE_init = 31
    RULE_initEl = 32
    RULE_goal = 33
    RULE_htnDef = 34
    RULE_nameDef = 35

    ruleNames =  [ u"pddl", u"domain", u"requireDef", u"typesDef", u"typedList", 
                   u"constantsDef", u"typedObjList", u"predicatesDef", u"predicateDef", 
                   u"typedVarList", u"structureDef", u"actionDef", u"goalDef", 
                   u"effectDef", u"cEffect", u"condEffect", u"observeDef", 
                   u"literal", u"atomicFormula", u"term", u"taskDef", u"methodDef", 
                   u"taskNetworkDef", u"subtasksDef", u"subtaskDef", u"orderingDefs", 
                   u"orderingDef", u"constraintDefs", u"constraintDef", 
                   u"problem", u"objectDeclaration", u"init", u"initEl", 
                   u"goal", u"htnDef", u"nameDef" ]

    EOF = Token.EOF
    LP=1
    RP=2
    OF=3
    EQUALS=4
    DEFINE=5
    DOMAIN=6
    PROBLEM=7
    DDOMAIN=8
    REQUIREMENTS=9
    TYPES=10
    CONSTANTS=11
    PREDICATES=12
    OBJECTS=13
    INIT=14
    GOAL=15
    ACTION=16
    PARAMETERS=17
    PRECONDITION=18
    EFFECT=19
    OBSERVE=20
    TASK=21
    METHOD=22
    ORDERED=23
    SUBTASKS=24
    ORDERING=25
    CONSTRAINTS=26
    HTN=27
    BEFORE=28
    NOT=29
    AND=30
    FORALL=31
    WHEN=32
    EITHER=33
    UNKNOWN=34
    OR=35
    ONEOF=36
    REQUIRE_KEY=37
    NAME=38
    VARIABLE=39
    NUMBER=40
    LINE_COMMENT=41
    WHITESPACE=42

    def __init__(self, input, output=sys.stdout):
        super(PDDLParser, self).__init__(input, output=output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PddlContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.PddlContext, self).__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(PDDLParser.DomainContext,0)


        def problem(self):
            return self.getTypedRuleContext(PDDLParser.ProblemContext,0)


        def getRuleIndex(self):
            return PDDLParser.RULE_pddl

        def enterRule(self, listener):
            if hasattr(listener, "enterPddl"):
                listener.enterPddl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPddl"):
                listener.exitPddl(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPddl"):
                return visitor.visitPddl(self)
            else:
                return visitor.visitChildren(self)




    def pddl(self):

        localctx = PDDLParser.PddlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pddl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 72
                self.domain()
                pass

            elif la_ == 2:
                self.state = 73
                self.problem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.DomainContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.requirements = None # RequireDefContext
            self.types = None # TypesDefContext
            self.constants = None # ConstantsDefContext
            self.predicates = None # PredicatesDefContext
            self._structureDef = None # StructureDefContext
            self.operators = list() # of StructureDefContexts

        def LP(self, i=None):
            if i is None:
                return self.getTokens(PDDLParser.LP)
            else:
                return self.getToken(PDDLParser.LP, i)

        def DEFINE(self):
            return self.getToken(PDDLParser.DEFINE, 0)

        def DOMAIN(self):
            return self.getToken(PDDLParser.DOMAIN, 0)

        def RP(self, i=None):
            if i is None:
                return self.getTokens(PDDLParser.RP)
            else:
                return self.getToken(PDDLParser.RP, i)

        def NAME(self):
            return self.getToken(PDDLParser.NAME, 0)

        def requireDef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PDDLParser.RequireDefContext)
            else:
                return self.getTypedRuleContext(PDDLParser.RequireDefContext,i)


        def typesDef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PDDLParser.TypesDefContext)
            else:
                return self.getTypedRuleContext(PDDLParser.TypesDefContext,i)


        def constantsDef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PDDLParser.ConstantsDefContext)
            else:
                return self.getTypedRuleContext(PDDLParser.ConstantsDefContext,i)


        def predicatesDef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PDDLParser.PredicatesDefContext)
            else:
                return self.getTypedRuleContext(PDDLParser.PredicatesDefContext,i)


        def structureDef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PDDLParser.StructureDefContext)
            else:
                return self.getTypedRuleContext(PDDLParser.StructureDefContext,i)


        def getRuleIndex(self):
            return PDDLParser.RULE_domain

        def enterRule(self, listener):
            if hasattr(listener, "enterDomain"):
                listener.enterDomain(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDomain"):
                listener.exitDomain(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDomain"):
                return visitor.visitDomain(self)
            else:
                return visitor.visitChildren(self)




    def domain(self):

        localctx = PDDLParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(PDDLParser.LP)
            self.state = 77
            self.match(PDDLParser.DEFINE)
            self.state = 78
            self.match(PDDLParser.LP)
            self.state = 79
            self.match(PDDLParser.DOMAIN)
            self.state = 80
            localctx.name = self.match(PDDLParser.NAME)
            self.state = 81
            self.match(PDDLParser.RP)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 82
                        localctx.requirements = self.requireDef()
                        pass

                    elif la_ == 2:
                        self.state = 83
                        localctx.types = self.typesDef()
                        pass

                    elif la_ == 3:
                        self.state = 84
                        localctx.constants = self.constantsDef()
                        pass

                    elif la_ == 4:
                        self.state = 85
                        localctx.predicates = self.predicatesDef()
                        pass

             
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PDDLParser.LP:
                self.state = 91
                localctx._structureDef = self.structureDef()
                localctx.operators.append(localctx._structureDef)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(PDDLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequireDefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.RequireDefContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._REQUIRE_KEY = None # Token
            self.keys = list() # of Tokens

        def LP(self):
            return self.getToken(PDDLParser.LP, 0)

        def REQUIREMENTS(self):
            return self.getToken(PDDLParser.REQUIREMENTS, 0)

        def RP(self):
            return self.getToken(PDDLParser.RP, 0)

        def REQUIRE_KEY(self, i=None):
            if i is None:
                return self.getTokens(PDDLParser.REQUIRE_KEY)
            else:
                return self.getToken(PDDLParser.REQUIRE_KEY, i)

        def getRuleIndex(self):
            return PDDLParser.RULE_requireDef

        def enterRule(self, listener):
            if hasattr(listener, "enterRequireDef"):
                listener.enterRequireDef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRequireDef"):
                listener.exitRequireDef(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRequireDef"):
                return visitor.visitRequireDef(self)
            else:
                return visitor.visitChildren(self)




    def requireDef(self):

        localctx = PDDLParser.RequireDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_requireDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(PDDLParser.LP)
            self.state = 100
            self.match(PDDLParser.REQUIREMENTS)
            self.state = 102 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 101
                localctx._REQUIRE_KEY = self.match(PDDLParser.REQUIRE_KEY)
                localctx.keys.append(localctx._REQUIRE_KEY)
                self.state = 104 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PDDLParser.REQUIRE_KEY):
                    break

            self.state = 106
            self.match(PDDLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesDefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.TypesDefContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.types = None # TypedListContext

        def LP(self):
            return self.getToken(PDDLParser.LP, 0)

        def TYPES(self):
            return self.getToken(PDDLParser.TYPES, 0)

        def RP(self):
            return self.getToken(PDDLParser.RP, 0)

        def typedList(self):
            return self.getTypedRuleContext(PDDLParser.TypedListContext,0)


        def getRuleIndex(self):
            return PDDLParser.RULE_typesDef

        def enterRule(self, listener):
            if hasattr(listener, "enterTypesDef"):
                listener.enterTypesDef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTypesDef"):
                listener.exitTypesDef(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTypesDef"):
                return visitor.visitTypesDef(self)
            else:
                return visitor.visitChildren(self)




    def typesDef(self):

        localctx = PDDLParser.TypesDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typesDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(PDDLParser.LP)
            self.state = 109
            self.match(PDDLParser.TYPES)
            self.state = 110
            localctx.types = self.typedList()
            self.state = 111
            self.match(PDDLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.TypedListContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._NAME = None # Token
            self.types = list() # of Tokens
            self.supertype = None # Token

        def OF(self):
            return self.getToken(PDDLParser.OF, 0)

        def typedList(self):
            return self.getTypedRuleContext(PDDLParser.TypedListContext,0)


        def NAME(self, i=None):
            if i is None:
                return self.getTokens(PDDLParser.NAME)
            else:
                return self.getToken(PDDLParser.NAME, i)

        def getRuleIndex(self):
            return PDDLParser.RULE_typedList

        def enterRule(self, listener):
            if hasattr(listener, "enterTypedList"):
                listener.enterTypedList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTypedList"):
                listener.exitTypedList(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTypedList"):
                return visitor.visitTypedList(self)
            else:
                return visitor.visitChildren(self)




    def typedList(self):

        localctx = PDDLParser.TypedListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typedList)
        self._la = 0 # Token type
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 113
                    localctx._NAME = self.match(PDDLParser.NAME)
                    localctx.types.append(localctx._NAME)
                    self.state = 116 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==PDDLParser.NAME):
                        break

                self.state = 118
                self.match(PDDLParser.OF)
                self.state = 119
                localctx.supertype = self.match(PDDLParser.NAME)
                self.state = 120
                self.typedList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PDDLParser.NAME:
                    self.state = 121
                    localctx._NAME = self.match(PDDLParser.NAME)
                    localctx.types.append(localctx._NAME)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantsDefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.ConstantsDefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(PDDLParser.LP, 0)

        def CONSTANTS(self):
            return self.getToken(PDDLParser.CONSTANTS, 0)

        def typedObjList(self):
            return self.getTypedRuleContext(PDDLParser.TypedObjListContext,0)


        def RP(self):
            return self.getToken(PDDLParser.RP, 0)

        def getRuleIndex(self):
            return PDDLParser.RULE_constantsDef

        def enterRule(self, listener):
            if hasattr(listener, "enterConstantsDef"):
                listener.enterConstantsDef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConstantsDef"):
                listener.exitConstantsDef(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitConstantsDef"):
                return visitor.visitConstantsDef(self)
            else:
                return visitor.visitChildren(self)




    def constantsDef(self):

        localctx = PDDLParser.ConstantsDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constantsDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PDDLParser.LP)
            self.state = 130
            self.match(PDDLParser.CONSTANTS)
            self.state = 131
            self.typedObjList()
            self.state = 132
            self.match(PDDLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedObjListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.TypedObjListContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._NAME = None # Token
            self.names = list() # of Tokens
            self.objtype = None # Token

        def OF(self):
            return self.getToken(PDDLParser.OF, 0)

        def typedObjList(self):
            return self.getTypedRuleContext(PDDLParser.TypedObjListContext,0)


        def NAME(self, i=None):
            if i is None:
                return self.getTokens(PDDLParser.NAME)
            else:
                return self.getToken(PDDLParser.NAME, i)

        def getRuleIndex(self):
            return PDDLParser.RULE_typedObjList

        def enterRule(self, listener):
            if hasattr(listener, "enterTypedObjList"):
                listener.enterTypedObjList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTypedObjList"):
                listener.exitTypedObjList(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTypedObjList"):
                return visitor.visitTypedObjList(self)
            else:
                return visitor.visitChildren(self)




    def typedObjList(self):

        localctx = PDDLParser.TypedObjListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typedObjList)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 134
                    localctx._NAME = self.match(PDDLParser.NAME)
                    localctx.names.append(localctx._NAME)
                    self.state = 137 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==PDDLParser.NAME):
                        break

                self.state = 139
                self.match(PDDLParser.OF)
                self.state = 140
                localctx.objtype = self.match(PDDLParser.NAME)
                self.state = 141
                self.typedObjList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PDDLParser.NAME:
                    self.state = 142
                    localctx._NAME = self.match(PDDLParser.NAME)
                    localctx.names.append(localctx._NAME)
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicatesDefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.PredicatesDefContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(PDDLParser.LP, 0)

        def PREDICATES(self):
            return self.getToken(PDDLParser.PREDICATES, 0)

        def RP(self):
            return self.getToken(PDDLParser.RP, 0)

        def predicateDef(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(PDDLParser.PredicateDefContext)
            else:
                return self.getTypedRuleContext(PDDLParser.PredicateDefContext,i)


        def getRuleIndex(self):
            return PDDLParser.RULE_predicatesDef

        def enterRule(self, listener):
            if hasattr(listener, "enterPredicatesDef"):
                listener.enterPredicatesDef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPredicatesDef"):
                listener.exitPredicatesDef(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPredicatesDef"):
                return visitor.visitPredicatesDef(self)
            else:
                return visitor.visitChildren(self)




    def predicatesDef(self):

        localctx = PDDLParser.PredicatesDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_predicatesDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(PDDLParser.LP)
            self.state = 151
            self.match(PDDLParser.PREDICATES)
            self.state = 153 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 152
                self.predicateDef()
                self.state = 155 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PDDLParser.LP):
                    break

            self.state = 157
            self.match(PDDLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateDefContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.PredicateDefContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.predicate = None # NameDefContext

        def LP(self):
            return self.getToken(PDDLParser.LP, 0)

        def typedVarList(self):
            return self.getTypedRuleContext(PDDLParser.TypedVarListContext,0)


        def RP(self):
            return self.getToken(PDDLParser.RP, 0)

        def nameDef(self):
            return self.getTypedRuleContext(PDDLParser.NameDefContext,0)


        def getRuleIndex(self):
            return PDDLParser.RULE_predicateDef

        def enterRule(self, listener):
            if hasattr(listener, "enterPredicateDef"):
                listener.enterPredicateDef(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPredicateDef"):
                listener.exitPredicateDef(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPredicateDef"):
                return visitor.visitPredicateDef(self)
            else:
                return visitor.visitChildren(self)




    def predicateDef(self):

        localctx = PDDLParser.PredicateDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_predicateDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(PDDLParser.LP)
            self.state = 160
            localctx.predicate = self.nameDef()
            self.state = 161
            self.typedVarList()
            self.state = 162
            self.match(PDDLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedVarListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(PDDLParser.TypedVarListContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._VARIABLE = None # Token
            self.names = list() # of Tokens
            self.vartype = None # Token

        def OF(self):
            return self.getToken(PDDLParser.OF, 0)

        def typedVarList(self):
            return self.getTypedRuleContext(PDDLParser.TypedVarListContext,0)


        def NAME(self):
            return self.getToken(PDDLParser.NAME, 0)

        def VARIABLE(self, i=None):
            if i is None:
                return self.getTokens(PDDLParser.VARIABLE)
            else:
                return self.getToken(PDDLParser.VARIABLE, i)

        def getRuleIndex(self):
            return PDDLParser.RULE_typedVarList

        def enterRule(self, listener):
            if hasattr(listener, "enterTypedVarList"):
                listener.enterTypedVarList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitTypedVarList"):
                listener.exitTypedVarList(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitTypedVarList"):
                return visitor.visitTypedVarList(self)
            else:
                return visitor.visitChildren(self)




    def typedVarList(self):
